# cheminova-deployment

./: .gitignore  README.md  ansible.cfg  playbook-bootstrap.yml  playbook-deploy.yml  playbook-provision.yml  pyproject.toml  requirements.yml
collections/ansible_collections/community.crypto-2.26.0.info/: GALAXY.yml
config/compose/: docker-compose.yml.j2
config/frontend/: config.json.j2
config/nginx/: 00-set-uid-and-gid.sh.j2  locations.conf.j2  nginx.conf  server.conf.j2
inventory/: hosts.yml
roles-external/certbot/: README.md
roles-external/certbot/defaults/: main.yml
roles-external/certbot/files/: close-firewall.sh  open-firewall.sh
roles-external/certbot/handlers/: main.yml
roles-external/certbot/meta/: .galaxy_install_info  main.yml
roles-external/certbot/tasks/: main.yml
roles-external/certbot/templates/: reload-nginx.sh.j2
roles-external/certbot/vars/: main.yml
roles-external/check-required-variables/: .ansible-lint  LICENSE  README.md  requirements.in  requirements.txt
roles-external/check-required-variables/defaults/: main.yml
roles-external/check-required-variables/meta/: .galaxy_install_info  main.yml
roles-external/check-required-variables/tasks/: main.yml
roles-external/docker/meta/: .galaxy_install_info
roles-external/fail2ban/meta/: .galaxy_install_info
roles-external/journald/meta/: .galaxy_install_info
roles-external/user/: .ansible-lint  .flake8  README.md  requirements.txt
roles-external/user/defaults/: main.yml
roles-external/user/meta/: .galaxy_install_info  main.yml
roles-external/user/tasks/: main.yml
(+32 files in other folders)
