[project]
name = "deployment"
version = "0.1.0"
description = "Deployment scripts for the Cheminova backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.8.0",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.7.0",
    "django>=6.0.1",
]
